# max-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: main.yml
src/max_cli/: config.py  main.py
src/max_cli/common/: exceptions.py  logger.py  utils.py
src/max_cli/core/: ai_engine.py  file_organizer.py  image_processor.py  pdf_engine.py
src/max_cli/interface/: cli_ai.py  cli_files.py  cli_images.py  cli_pdf.py
tests/: test_core_images.py
